# whatever

./: .coveragerc  .gitignore  .pre-commit-config.yaml  app.py  conftest.py  increment.py  loan.py  pyproject.toml  reject_loan.py  sonar-project.properties  test_app.py  test_increment.py  test_increment_hyp.py  test_reject_loan.py  test_request.py
.github/workflow/: build.yaml
.github/workflows/: main.yml
src/blog/: app.py  commands.py  models.py  queries.py
tests/: conftest.py
tests/blog/: test_app.py  test_commands.py  test_queries.py
tests/blog/schemas/: article.json  articles_list.json
tests/sum/: test_sum.py
