[tool.poetry]
name = "whatever"
version = "0.1.0"
description = "scaffolding for tm"
authors = ["Kostya Gonciarou <go.toba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.5.1"}
flask-pydantic = "^0.11.0"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mutmut = "^2.4.4"
hypothesis = "^6.89.0"
jsonschema = "^4.20.0"
referencing = "^0.31.0"
coverage = "^7.3.2"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.run]
omit = [
    "*/test_*/*",
    "conftest.py",
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
